Changes in version: JM_1.4-5


  * Fixed a bug in fixef.jointModel().
   
==============================

Changes in version: JM_1.4-4


  * Fixed a bug in phGH.fit().
   
==============================

Changes in version: JM_1.4-3


  * Small updates.
   
==============================

Changes in version: JM_1.4-2


  * Small updates.
   
==============================

Changes in version: JM_1.3-0


  * Several minor improvements.
   
==============================

Changes in version: JM_1.2-0


  * the new generic function aucJM() calculates time-dependent AUCs for joint models.

  * an updated version of function dynCJM() calculates a dynamic discrimination index 
    (weighted average of time-dependent AUCs) for joint models.

  * the new generic function prederrJM() calculates prediction errors for joint models.

  * survfitJM() is now a generic function with a method for 'jointModel' objects.

  * new versions of functions ins() and ibs() with updated 'weight.fun' argument, and makepredictcall() methods.
   

==============================

Changes in version: JM_1.1-0

  * a small bug has been corrected in the plot() method for 'jointModel' objects, when
    method = "piecewise-PH-aGH" or method "piecewise-PH-GH" was used.
   

==============================

Changes in version: JM_1.0-1

  * use of globalVariables() in source code.

  * a small bug has been corrected in the plot() method for 'jointModel' objects, when
    a random intercepts linear mixed model was used
   

==============================

Changes in version: JM_1.0-0

  * This is the version of the package related to the book: Rizopoulos, D. (2012). Joint 
    Models for Longitudinal and Time-to-Event Data: with Applications in R. 
    Boca Raton: Chapman & Hall/CRC.

  * functions dns(), dbs(), ins() and ibs() calculate numerically derivative and integrals for functions
    ns() and bs(), respectively.

  * a coef() method has been added for objects of class 'summary.jointModel'.
   
