@@ -1,0 +1,8 @@
+.Rproj.user
+.Rhistory
+.RData
+*.history
+.gz
+src/*.o
+src/*.so
+src/*.dll
