@@ -1,3 +1,10 @@
+Changes in version: JM_1.4-6
+
+
+  * Updated aucJM() method.
+   
+==============================
+
 Changes in version: JM_1.4-5
 
 
